--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
+    <base href="https://FomichevIgor.github.io/landing_page_Burov/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/mile-stone-one/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript">
     </script>
     <script type="text/javascript">
