--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 
 <head>
-    <base href="https://FomichevIgor.github.io/landing_page_Burov/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript">
     </script>
     <script type="text/javascript">
@@ -44,7 +43,7 @@
     <div class="content">
         <div class="container_content">
             <div class="content_main">
-                <div><img class="foto" src="/images/5e82d7b1b56ffa2cd9538f7e_5e9532a78193b.jpg" alt="foto"></div>
+                <div><img class="foto" src="images/5e82d7b1b56ffa2cd9538f7e_5e9532a78193b.jpg" alt="foto"></div>
                 <div class="content_main_discription">
                     <p>Буров Егор Владимирович работает в сфере ортопедии и травматологии.
                         Он работает с болезнями опорно-двигательного аппарата.
