--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./images">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript">
     </script>
     <script type="text/javascript">
@@ -49,6 +50,13 @@
                         Он работает с болезнями опорно-двигательного аппарата.
                         Прогрессивные техники, применяемые врачами этого профиля,
                         позволяют компенсировать не только приобретенные травмы и деформации костей, но и врожденные.
+                    </p>
+                    <p>
+                        <b>Опыт и достижения :</b>
+                        Общая практика,
+                        Высшая категория.
+                        <b>Профессиональный стаж
+                        15 лет</b>
                     </p>
                 </div>
             </div>
@@ -140,7 +148,7 @@
                 src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A015451465042cb52e3fff820200c007cfb0a130390378f1315571ccca5d0b00d&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
             <p>Красный проспект, 52, 1 этаж
                 Район Центральный</p>
-                <ul>
+            <ul>
                 <li>+7 (383) 310-03-40</li>
                 <li>+7 (383) 229-10-14</li>
                 <li> +7 (383) 222-52-21</li>
