--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <script src="https://api-maps.yandex.ru/2.1/?apikey=378c7622-f0b6-490f-8d40-d14e9b77cff8&lang=ru_RU"
                         type="text/javascript">
                         </script>
-                    <script src="scripts/map1.js"></script>
+                    <script src="./scripts/map1.js"></script>
                     <div><a href="https://mkcngmu.ru/" class="button">Записаться на прием</a></div>
                 </div>
 
@@ -146,7 +146,7 @@
                     <script src="https://api-maps.yandex.ru/2.1/?apikey=378c7622-f0b6-490f-8d40-d14e9b77cff8&lang=ru_RU"
                         type="text/javascript">
                         </script>
-                    <script src="scripts/map2.js"></script>
+                    <script src="./scripts/map2.js"></script>
 
                     <div><a href="https://euromednsk.ru/specs/56727/" class="button">Записаться на прием</a></div>
                 </div>
