--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </lu>
 
             </nav>
-            <div><img src="images/hospital_1655240.png" alt=""></div>
+            <div><img src="./images/hospital_1655240.png" alt=""></div>
            
             <!-- <a href="" class="button">Записаться на прием</a>  -->
         </div>
