--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
                 <lu class="header_nav_lu">
 
-                    <li class="header_nav_li"><a href="">Консультации</a></li>
+                    <li class="header_nav_li"><a href="#consultation">Консультации</a></li>
 
 
                 </lu>
 
             </nav>
-            <div><img src="./images/hospital_1655240.png" alt=""></div>
+            <div><img src="images/hospital_1655240.png" alt=""></div>
            
             <!-- <a href="" class="button">Записаться на прием</a>  -->
         </div>
@@ -107,7 +107,7 @@
 
     <div class="content_consultation">
         <div class="container_consultation_main">
-            <h3 class="content_consultation_h3">Консультации</h3>
+            <h3 id="consultation" class="content_consultation_h3" >Консультации</h3>
             <div class="content_consultation_items">
                 <div class="consultation_item">
                     <div>Медицинский консультативный центр на Красном проспекте
@@ -148,8 +148,9 @@
                         </script>
                     <script src="./scripts/map2.js"></script>
 
-                    <div><a href="https://euromednsk.ru/specs/56727/" class="button">Записаться на прием</a></div>
+                    <div class="button_div"><a href="https://euromednsk.ru/specs/56727/" class="button">Записаться на прием</a></div>
                 </div>
+                
 
             </div>
         </div>
