--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         type="text/javascript">
                         </script>
                     <script src="./scripts/map1.js"></script>
-                    <div><a href="https://mkcngmu.ru/" class="button">Записаться на прием</a></div>
+                    <div class="button_div"><a href="https://mkcngmu.ru/" class="button">Записаться на прием</a></div>
                 </div>
 
                 <div  class="consultation_item">
