--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Montserrat:wght@500;600;700&family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./styles/styles.css">
 
 
@@ -19,10 +23,10 @@
             <nav class="header_nav">
 
                 <lu class="header_nav_lu">
-                    <li class="header_nav_li"><a href="#education">Образование</a></li>
-                    <li class="header_nav_li"><a href="#certificates">Сертификаты</a></li>
-                    <li class="header_nav_li"><a href="#Specialization">Специализация</a></li>
-                    <li class="header_nav_li"><a href="#consultation">Консультации</a></li>
+                    <li class="header_nav_li link"><a href="#education">Образование</a></li>
+                    <li class="header_nav_li link"><a href="#certificates">Сертификаты</a></li>
+                    <li class="header_nav_li link"><a href="#Specialization">Специализация</a></li>
+                    <li class="header_nav_li link"><a href="#consultation">Консультации</a></li>
 
                 </lu>
 
@@ -206,13 +210,17 @@
                 </div>
                 <div class="certif">
                     <img id="myImg" src="images/certif31.jpg" alt="Снег" style="width:100%;max-width:100px">
-                </div> <div class="certif">
+                </div>
+                <div class="certif">
                     <img id="myImg" src="images/certif32.jpg" alt="Снег" style="width:100%;max-width:100px">
-                </div> <div class="certif">
+                </div>
+                <div class="certif">
                     <img id="myImg" src="images/certif33.jpg" alt="Снег" style="width:100%;max-width:100px">
-                </div> <div class="certif">
+                </div>
+                <div class="certif">
                     <img id="myImg" src="images/certif34.jpg" alt="Снег" style="width:100%;max-width:100px">
-                </div> <div class="certif">
+                </div>
+                <div class="certif">
                     <img id="myImg" src="images/certif35.jpg" alt="Снег" style="width:100%;max-width:100px">
                 </div>
 
@@ -321,7 +329,8 @@
                     </div>
 
                     <ul>
-                        <li> +7 (383) 209-03-03 Единая справочная</li>
+                        <li>Единая справочная</li>
+                        <li> +7 (383) 209-03-03 </li>
                         <li>+7 (383) 207-83-04</li>
                         <li>+7 (383) 207-87-97</li>
                     </ul>
